force-app/main/default/objects/SFAWT05__mdt/SFAWT05__mdt.object-meta.xml
<CustomObject>
    <label>SFAWT05</label>
    <pluralLabel>SFAWT05</pluralLabel>
</CustomObject>