force-app/main/default/objects/SFAWT05__mdt/fields/Integration_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Integration_Procedure__c</fullName>
    <label>Integration Procedure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>