force-app/main/default/objects/SFAWT05__mdt/fields/RecordType_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordType_DeveloperName__c</fullName>
    <label>RecordType DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>