force-app/main/default/objects/SFAWT05__mdt/fields/RecordType_Object__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Object__c</fullName>
    <label>RecordType Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>