force-app/main/default/objects/SFAWT05__mdt/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <defaultValue>0</defaultValue>
    <description>in minutes (0 for real time)</description>
    <label>Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>